# docker-image-exchange

./: .gitignore  Makefile  README.md  TEST_EXPORT_SUMMARY.md  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.py  run_tests.sh  template.txt
app/: __init__.py
app/models/: __init__.py  base.py  doc.py  document.py  processing.py  tag.py
app/subapps/doc/: form.py  handle.py  route.py
app/subapps/manager/: __init__.py
app/subapps/process/: __init__.py
app/utils/: doc.py
config/: __init__.py  base.py  container.py  database.py  redis.py
core/file/: api.py
core/file/client/: __init__.py  base.py  kminio.py
core/manager/: README.md  __init__.py  knowledge.py
core/manager/spliter/: __init__.py  word.py
core/schema/: __init__.py
db/: __init__.py  postgres.py
docs/: core.md
init/config/: __init__.py  base.py  container.py  database.py  redis.py  server.py  storage.py
init/db/: __init__.py  postgres.py
init/db/redis/: client.py  stream.py
init/db/s3/: kminio.py
kasync/: __main__.py
kasync/consumer/: doc.py
resource/docs/: core.md
resource/examples/: init.sql  knowledge_example.py
resource/sql/: init.sql
src/: App.tsx  api.ts  main.tsx
src/components/: Clients.tsx  Dashboard.tsx  Login.tsx  Metrics.tsx  Sync.tsx  Users.tsx
src/types/: index.ts
src/utils/: auth.ts
tests/: README.md  conftest.py  test_file_api.py  test_kminio.py  test_knowledge.py  test_schema.py  test_word_spliter.py
